<resources>
    <string name="app_name">Calculator</string>
    <string name="_7">7</string>
    <string name="equal">=</string>
    <string name="c">C</string>
    <string name="div">÷</string>
    <string name="multi">×</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="backspace">⌫</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="blank" />
    <string name="brc">( )</string>
    <string name="convert">Convert</string>
    <string name="calculator">Calculator</string>
    <string name="converter">Converter</string>
    <string name="currency_i_have">Currency I have</string>
    <string name="currency_i_want">Currency I want</string>
</resources>