<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#252c3c"
    tools:context=".currencyConvertor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25dp">

        <Button
            android:id="@+id/cals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/calculator"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginStart="25dp"
            android:background="@drawable/rectangle"/>

        <Button
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/converter"
            android:textColor="#00ffff"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rectangle"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/_0"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="50sp"
            android:background="@drawable/rectangle"
            android:inputType="none"
            android:autofillHints="@string/_0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_i_have"
            android:textSize="24sp"/>

        <Spinner
            android:id="@+id/convertFrom"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_i_want"
            android:textSize="24sp"/>

        <Spinner
            android:id="@+id/convertTo"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="25dp"/>

        <Button
            android:id="@+id/convert"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/convert"
            android:textSize="24sp"
            android:textColor="#0d0d0d"
            android:layout_margin="12dp"
            android:background="@drawable/btn_shape2"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text=""
            android:textSize="50sp" />

    </LinearLayout>

</LinearLayout>